# Awaker

./: .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  giga_srv.py  holidays.py  icons.json  main.py  pyproject.toml  requirements.txt
prompts/content/: text_rewrite.yaml
src/: giga_srv.py  holidays.py  main.py  utils.py  weather.py
tests/: test_main.py
