[project]
name = "awaker"
version = "0.1.0"
description = "Telegram bot for morning awake and greeting with birthdays"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.6.0",
    "apscheduler==3.10.4",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "python-telegram-bot==21.6",
    "pytz==2024.2",
    "requests==2.32.3",
    "ruff==0.6.9",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tzlocal==5.2",
    "urllib3==2.2.3",
]
